# ffmpeg-demo

./: CMakeLists.txt
src/: MFEncoderH264.cpp  MFEncoderH264.h  VideoDecoding.cpp  VideoDecoding.h  hw_decode.cpp  hw_decode.h  hw_device_test.cpp  hw_device_test.h  main.cpp  mft_encode.cpp  mft_encode.h  qsv_transcode.cpp  qsv_transcode.h  sf_player.cpp  sf_player.h  vaapi_encode.cpp  vaapi_encode.h
